--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
+# -------------------------------------
+#                    _           _
+#    _ __  _ __ ___ (_) ___  ___| |_
+#   | '_ \| '__/ _ \| |/ _ \/ __| __|
+#   | |_) | | | (_) | |  __/ (__| |_
+#   | .__/|_|  \___// |\___|\___|\__|
+#   |_|           |__/
+# -----------------------------------
+.venv/
+.idea/
+.vscode/
+.DS_Store
+
+
+# -------------------------------------
+#                                    _
+#     __ _  ___ _ __   ___ _ __ __ _| |
+#    / _' |/ _ \ '_ \ / _ \ '__/ _' | |
+#   | (_| |  __/ | | |  __/ | | (_| | |
+#    \__, |\___|_| |_|\___|_|  \__,_|_|
+#    |___/
+# -------------------------------------
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
